--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -9,8 +9,9 @@ ENV LC_ALL ja_JP.UTF-8
 ENV TZ JST-9
 ENV TERM xterm
 
-RUN apt-get install -y vim less
+RUN apt-get install -y vim less libportaudio2 pulseaudio
 RUN pip install --upgrade pip
 RUN pip install --upgrade setuptools
 RUN pip install openai
 RUN pip install python-dotenv
+RUN pip install sounddevice scipy
